--- a/html/index.html
+++ b/html/index.html
@@ -14,13 +14,6 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <h1>The heading 1</h1>
-    <h2>The heading 2</h2>
-    <h3>The heading 3</h3>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis
-      autem modi illum neque quia. Officia, quo eligendi. Laborum libero culpa
-      autem illo officiis similique dicta asperiores hic, molestias cumque odit.
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
