--- a/html/index.html
+++ b/html/index.html
@@ -14,10 +14,6 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <button class="btn btn--primary btn--block">Buy Now</button>
-    <button class="btn btn--secondary btn--block">Buy Now</button>
-    <button class="btn btn--accent btn--block">Buy Now</button>
-    <a href="#" class="btn btn--block btn--primary">Buy Now</a>
-    <button class="btn btn--outline btn--block">Buy Now</button>
+    <input type="text" name="" class="input" placeholder="Enter Domain Name Here...">
   </body>
 </html>
