added some search engine optimzation meta tags

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moshify</title>
+    <title>Moshify - Deploy your website for $9</title>
+    <meta name="description" content="Deploy your websites for less than $9">
+    <!-- this open graph meta tags are used for preview of your website on social sites  when you share the link -->
+    <meta property="og:title" content="Moshify">
+    <meta property="og:description" content="Deploy your websites for less than $9">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://">
+    <meta property="og:url" content="https://moshified.com">
+    
+    
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
