added the site link and the image link inside the meta tags

--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Moshify">
     <meta property="og:description" content="Deploy your websites for less than $9">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://">
-    <meta property="og:url" content="https://moshified.com">
+    <meta property="og:image" content="https://drive.google.com/file/d/158ipTPOXJBwacsOEhpern99jKRCspuff/view?usp=sharing">
+    <meta property="og:url" content="https://moshifywebhost.netlify.app/">
     
     
     <link rel="preconnect" href="https://fonts.gstatic.com" />
